# wp-meta-skills

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CUTOVER.md  EVIDENCE.md  MANIFEST.sha256  PACKAGE-BUILD.md  PROVENANCE.md  PUBLICATION-CHECKLIST.md  README.md  SECURITY.md  install.sh  pyproject.toml  pytest.ini  requirements-validation.txt  skills.sh.json
.claude/agents/: wordpress-block-executor.md  wordpress-block-planner.md  wordpress-blueprint-executor.md  wordpress-content-model-planner.md  wordpress-critic.md  wordpress-migration-planner.md  wordpress-performance-critic.md  wordpress-planner.md  wordpress-plugin-executor.md  wordpress-plugin-planner.md  wordpress-security-critic.md  wordpress-theme-critic.md  wordpress-theme-executor.md  wordpress-theme-planner.md
.codex/agents/: wordpress-block-executor.toml  wordpress-block-planner.toml  wordpress-blueprint-executor.toml  wordpress-content-model-planner.toml  wordpress-critic.toml  wordpress-migration-planner.toml  wordpress-performance-critic.toml  wordpress-planner.toml  wordpress-plugin-executor.toml  wordpress-plugin-planner.toml  wordpress-security-critic.toml  wordpress-theme-critic.toml  wordpress-theme-executor.toml  wordpress-theme-planner.toml
docs/: public-readiness-review-2026-07-02.md  wordpress-assist-research-plan-2026-07-02.md
scripts/: build-wp-symbol-db.py  measure-plan010-artifact-path.py  validate-agent-frontmatter.py  validate-distribution-parity.py  validate-eval-suite-integrity.py  validate-public-docs.py  validate-wordpress-exact-api-contract.py
(+735 files in other folders)
