[project]
name = "wp-meta-skills-validation"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = ["pyyaml==6.0.3"]

[project.optional-dependencies]
test = ["pytest==9.1.0"]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider --strict-markers"
testpaths = ["evals/harness/tests"]
markers = [
  "docker_boundary: real Docker isolation and egress tests",
  "docker_sandbox: package-sandbox Docker boundary shard",
  "docker_generated_runtime: generated WordPress runtime Docker boundary shard",
  "live_provider: authorized live provider metadata preflight excluded from ordinary CI",
  "real_api_lint: pinned PHPStan and API toolchain integration",
  "real_security_gate: pinned PHPCS and WPCS security integration",
]
